Fixed spacing on expertise header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ form {
 }
 
 .expertise-divider {
-  height: 60vh;
+  height: 47vh;
   width: 100vw;
   background: #65b0df;
   color: black;
@@ -77,7 +77,7 @@ form {
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
   background: white;
   display: block;
-  margin: 50px auto;
+  margin: 35px auto;
 }
 
 .dev-icon,
